--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,9 @@
 version: '3'
 
 services:
-  frontend:
-    build: 
+  web:
+    build:
       context: .
-      dockerfile: Dockerfile.dev
-    ports: 
-      - '3000:3000'
-    volumes: 
-      - /app/node_modules
-      - .:/app
-  
-  tests:
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes: 
-      - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"]
+      dockerfile: Dockerfile
+    ports:
+      - '80:80'
